--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -1,3 +1,6 @@
+- content_for :meta do
+  %title Now - Megan Tiu
+
 = render partial: "header.html.haml"
 .content.now
   %p#now Here's what I'm up to now:
