--- a/app/views/blog/post_five.html.haml
+++ b/app/views/blog/post_five.html.haml
@@ -1,8 +1,12 @@
+- @title = "Ruby's Enumerable Module and You"
+- content_for :meta do
+  %title #{@title + " - Megan Tiu "}
+
 = render partial: "static/header.html.haml"
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
-      %h1.title Ruby's Enumerable Module and You
+      %h1.title #{@title}
       .post
         %p.date-stamp May 29, 2016
         %p.body
