--- a/app/views/blog/post_four.html.haml
+++ b/app/views/blog/post_four.html.haml
@@ -1,8 +1,12 @@
+- @title = "Getting and Setting Cookies in Javascript the Fun and Easy Way"
+- content_for :meta do
+  %title #{@title + " - Megan Tiu "}
+
 = render partial: "static/header.html.haml"
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
-      %h2.title Getting and Setting Cookies in Javascript the Fun and Easy Way
+      %h2.title #{@title}
       .post
         %p.date-stamp May 22, 2016
         %p.body
