--- a/app/views/blog/post_six.html.haml
+++ b/app/views/blog/post_six.html.haml
@@ -1,8 +1,12 @@
+- @title = "Adventures of a One-Woman Development Team"
+- content_for :meta do
+  %title #{@title + " - Megan Tiu "}
+
 = render partial: "static/header.html.haml"
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
-      %h1.title#adventures-of-a-one-woman-development-team Adventures of a One-Woman Development Team
+      %h1.title#adventures-of-a-one-woman-development-team #{@title}
       .post
         %p.date-stamp June 5, 2016
         %p.body At time of writing, I've been studying and practicing web development for roughly a year. In that time, I've gone from nervous, questioning, and anxious about my future to firmly planted in a career I love. In June of last year, I introduced myself to modern HTML & CSS (the skills I learned as a 10-year-old weren't going to cut it in a professional setting). In July, I started writing Ruby. I went through a web dev bootcamp. I learned to use Rails, Javascript, git. I learned to work on a team, debug my code, and explore the vast world of programming. In September, I started my first full-time development job.
