--- a/app/views/blog/post_two.html.haml
+++ b/app/views/blog/post_two.html.haml
@@ -1,8 +1,12 @@
+- @title = "On the Importance of Side Projects"
+- content_for :meta do
+  %title #{@title + " - Megan Tiu "}
+
 = render partial: "static/header.html.haml"
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
-      %h2.title On the Importance of Side Projects
+      %h2.title #{@title}
       .post
         %p.date-stamp October 25, 2015
         %p.body
