Meta descriptions for static pages

--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta do
   %title About - Megan Tiu
+  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia."}
 
 = render partial: "header.html.haml"
 .content.about
