--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta do
   %title Now - Megan Tiu
+  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia. This is what she's up to now."}
 
 = render partial: "header.html.haml"
 .content.now
