--- a/app/views/static/_header.html.haml
+++ b/app/views/static/_header.html.haml
@@ -1,15 +1,17 @@
 .partial
   .photo
-    %a{:href => "/"}
-      = image_tag "me.jpg", class: "img-responsive img-circle me-pic", alt: "Megan Tiu"
+    %a{:href => '/'}
+      = image_tag 'me.jpg', class: 'img-responsive img-circle me-pic',
+        alt: 'Megan Tiu'
   %h1.name Megan Tiu
   .social-icons
-    = link_to image_tag('my_tw2.png'), "http://twitter.com/megandtiu"
-    = link_to image_tag("32px.png"), "http://github.com/megantiu"
-    = link_to image_tag("my_li2.png"), "http://linkedin.com/in/megantiu"
-    = link_to image_tag("email.png"), "mailto:megan@megantiu.com"
+    = link_to image_tag('my_tw2.png'), 'http://twitter.com/megandtiu'
+    = link_to image_tag('32px.png'), 'http://github.com/megantiu'
+    = link_to image_tag('my_li2.png'), 'http://linkedin.com/in/megantiu'
+    = link_to image_tag('email.png'), 'mailto:megan@megantiu.com'
   .links
-    = link_to "about", about_path, class: "link"
-    = link_to "contact", contact_path, class: "link"
-    = link_to "blog", blog_path, class: "link"
-    = link_to "now", now_path, class: "link"
+    = link_to 'about', about_path, class: 'link'
+    = link_to 'contact', contact_path, class: 'link'
+    = link_to 'blog', blog_path, class: 'link'
+    = link_to 'resume', '/resume', class: 'link'
+    = link_to 'now', now_path, class: 'link'
