--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -5,8 +5,7 @@
 = render partial: "header.html.haml"
 .content.contact
   %p
-    I'm a full-stack web developer in Atlanta, GA currently working for
-    %a{:href => "http://www.fittery.com"} Fittery.
+    I'm a full-stack web developer in Atlanta, GA currently looking for new opportunities.
   %p
     You can send me an email
     %a{:href => "mailto:megan@megantiu.com"} here.
