--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -16,8 +16,7 @@
     = link_to image_tag('email.png'), 'mailto:megan@megantiu.com'
   .description
     %p
-      I'm a full-stack web developer in Atlanta, GA currently working for
-      %a{:href => 'http://www.fittery.com'} Fittery.
+      I'm a full-stack web developer in Atlanta, GA currently looking for new opportunities.
   .links
     = link_to 'about', about_path, class: 'link'
     = link_to 'contact', contact_path, class: 'link'
