--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -7,9 +7,9 @@
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I'm running solo at
+      I'm currently looking for new opportunities after recently leaving
       %a{:href => "http://fittery.com"} Fittery,
-      where I'm writing and maintaining multiple projects including Rails apps, Ruby gems, and JS apps and libraries. I'm learning and growing rapidly and it's so genuinely exhilarating.
+      where I wrote and maintained multiple projects including Rails apps, Ruby gems, and JS apps and libraries. I'm so grateful for how much I grew and learned while I was there.
     %li
       I'm on the board of directors for
       %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
@@ -17,8 +17,17 @@
     %li
       I've founded and am the co-organizer for Ladies of Tech Talent South, a women's group with the TTS bootcamp that acknowledges how difficult it is for women to enter tech and aims to provide a safe space for socializing, studying, and supporting each other.
     %li
-      I'm in an awesome book club for growing developers where we're currently reading Hoover and Oshineye's
+      I'm in a wonderful book club for growing developers where we just finished Hoover and Oshineye's
       %a{:href => "http://chimera.labs.oreilly.com/books/1234000001813/index.html"} Apprenticeship Patterns: Guidance for the Aspiring Software Craftsman.
+      We've just begun Hunt and Thomas'
+      %a{href: 'https://pragprog.com/book/tpp/the-pragmatic-programmer'} The Pragmatic Programmer.
+    %li
+      I recently created a talk based on my
+      %a{href: '/blog/8/upgrading-rails-doesnt-have-to-be-painful'} Upgrading Rails blog post
+      that I've given at the
+      %a{href: 'https://speakerdeck.com/megantiu/atlrug-upgrading-rails-isnt-so-bad'} Atlanta Ruby Users Group
+      and at
+      %a{href: 'https://speakerdeck.com/megantiu/upgrading-rails-isnt-so-bad'} Rails Girls Atlanta.
     %li
       I get to snuggle and play with
       %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
