Uh hi, I definitely work for CallRail now

--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -5,7 +5,9 @@
 = render partial: "header.html.haml"
 .content.about
   %p
-    I'm a full-stack web developer specializing in Rails and am currently looking for new opportunities. I most recently worked at
+    I'm a full-stack web developer specializing in Rails and am currently working and building cool things at
+    %a{href: 'http://callrail.com'} CallRail.
+    Before that I worked for
     %a{:href => "http://www.fittery.com"} Fittery,
     where I wore many hats on a small, fast-paced development team. I love writing clean code, optimizing efficiency, working with big data, and architecting APIs. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do and am excited to grow my computing knowledge in as many ways as possible.
   %p
