--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -16,7 +16,8 @@
     = link_to image_tag('email.png'), 'mailto:megan@megantiu.com'
   .description
     %p
-      I'm a full-stack web developer in Atlanta, GA currently looking for new opportunities.
+      I'm a full-stack web developer in Atlanta, GA currently working for
+      %a{href: 'http://callrail.com'} CallRail.
   .links
     = link_to 'about', about_path, class: 'link'
     = link_to 'contact', contact_path, class: 'link'
