--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -7,9 +7,15 @@
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I'm currently looking for new opportunities after recently leaving
-      %a{:href => "http://fittery.com"} Fittery,
-      where I wrote and maintained multiple projects including Rails apps, Ruby gems, and JS apps and libraries. I'm so grateful for how much I grew and learned while I was there.
+      I'm now working for
+      %a{href: 'http://callrail.com'} CallRail
+      and building interesting server-side tools that wonderfully appeal to my optimization and testing fixations.
+    %li
+      I'll be giving a
+      %a{href: 'http://rubyconf.org/program#prop_4'} talk a RubyConf this year!
+      Entitled "Bootcamp Grads Have Feelings, Too," it's a full-length version of my lightning talk from
+      %a{href: 'https://www.andconf.io/'} AndConf
+      on creating an inclusive community for people of all skill levels.
     %li
       I'm on the board of directors for
       %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
@@ -21,13 +27,6 @@
       %a{:href => "http://chimera.labs.oreilly.com/books/1234000001813/index.html"} Apprenticeship Patterns: Guidance for the Aspiring Software Craftsman.
       We've just begun Hunt and Thomas'
       %a{href: 'https://pragprog.com/book/tpp/the-pragmatic-programmer'} The Pragmatic Programmer.
-    %li
-      I recently created a talk based on my
-      %a{href: '/blog/8/upgrading-rails-doesnt-have-to-be-painful'} Upgrading Rails blog post
-      that I've given at the
-      %a{href: 'https://speakerdeck.com/megantiu/atlrug-upgrading-rails-isnt-so-bad'} Atlanta Ruby Users Group
-      and at
-      %a{href: 'https://speakerdeck.com/megantiu/upgrading-rails-isnt-so-bad'} Rails Girls Atlanta.
     %li
       I get to snuggle and play with
       %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
