--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -44,6 +44,17 @@
   }
 }
 
+.talks {
+  ul {
+    margin: 0 15%;
+    text-align: left;
+  }
+
+  li {
+    margin: 10px 0;
+  }
+}
+
 /* About page */
 
 @media screen and (min-width: 1200px) {
@@ -55,13 +66,13 @@
 /* Now list responsive adjustments */
 
 @media screen and (min-width: 1200px) {
-  .content.now {
+  .content.now, .content.talks {
     padding: 0 200px;
   }
 }
 
 @media screen and (max-width: 425px) {
-  .content.now {
+  .content.now, .content.talks {
     font-size: 15px;
     margin-left: -20px;
   }
