--- a/app/views/static/_header.html.haml
+++ b/app/views/static/_header.html.haml
@@ -13,4 +13,5 @@
     = link_to 'about', about_path, class: 'link'
     = link_to 'contact', contact_path, class: 'link'
     = link_to 'blog', blog_path, class: 'link'
+    = link_to 'talks', talks_path, class: 'link'
     = link_to 'now', now_path, class: 'link'
