Update RubyConf talk link to speakerdeck slides

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,7 +8,7 @@
   %ul
     %li
       November 2016, RubyConf,
-      %a{href: 'http://rubyconf.org/program#prop_4'} "Bootcamp Grads Have Feelings, Too"
+      %a{href: 'https://speakerdeck.com/megantiu/bootcamp-grads-have-feelings-too'} "Bootcamp Grads Have Feelings, Too"
     %li
       August 2016, AndConf, "Bootcamp Grads Have Feelings, Too", short-form
     %li
