Modifying talks page to better accommodate video and slides

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,17 +8,32 @@
   %ul
     %li
       November 2016, RubyConf,
-      %a{href: 'https://speakerdeck.com/megantiu/bootcamp-grads-have-feelings-too'} "Bootcamp Grads Have Feelings, Too"
+      %strong "Bootcamp Grads Have Feelings, Too"
+      %ul
+        %li
+          %a{href: 'https://www.youtube.com/watch?v=133HhIjmfRE'} video
+          \/
+          %a{href: 'https://speakerdeck.com/megantiu/bootcamp-grads-have-feelings-too'} slides
     %li
-      August 2016, AndConf, "Bootcamp Grads Have Feelings, Too", short-form
+      August 2016, AndConf,
+      %strong "Bootcamp Grads Have Feelings, Too",
+      short-form
     %li
-      August 2016, Tech Talent South, "Developer Interviews 101"
+      August 2016, Tech Talent South,
+      %strong "Developer Interviews 101"
     %li
       July 2016, Atlanta Ruby Users Group,
-      %a{href: 'https://speakerdeck.com/megantiu/atlrug-upgrading-rails-isnt-so-bad'} "Upgrading Rails (Isn't So Bad)"
+      %strong "Upgrading Rails (Isn't So Bad)"
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/atlrug-upgrading-rails-isnt-so-bad'} slides
     %li
-      July 2016, Ladies of Tech Talent South, "Intro to Hackathons"
+      July 2016, Ladies of Tech Talent South,
+      %strong "Intro to Hackathons"
     %li
       June 2016, Rails Girls Atlanta,
-      %a{href: 'https://speakerdeck.com/megantiu/upgrading-rails-isnt-so-bad'} "Upgrading Rails (Isn't So Bad)",
+      %strong "Upgrading Rails (Isn't So Bad)",
       short-form
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/upgrading-rails-isnt-so-bad'} slides
