--- a/app/views/static/_header.html.haml
+++ b/app/views/static/_header.html.haml
@@ -5,7 +5,7 @@
         alt: 'Megan Tiu'
   %h1.name Megan Tiu
   .social-icons
-    = link_to image_tag('my_tw2.png'), 'http://twitter.com/megandtiu'
+    = link_to image_tag('my_tw2.png'), 'http://twitter.com/megantiu'
     = link_to image_tag('32px.png'), 'http://github.com/megantiu'
     = link_to image_tag('my_li2.png'), 'http://linkedin.com/in/megantiu'
     = link_to image_tag('email.png'), 'mailto:megan@megantiu.com'
