--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -11,4 +11,4 @@
     You can send me an email
     %a{:href => "mailto:megan@megantiu.com"} here.
     Or you could tweet at me
-    %a{:href => "http://twitter.com/megandtiu"} here.
+    %a{:href => "http://twitter.com/megantiu"} here.
