Fixing meta description tags

--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
   %title Blog - Megan Tiu
-  %meta{description: "Megan Tiu is a full-stack developer in Atlanta, Georgia. This is her blog. Read all about her experiences with Ruby, Rails, Javascript, developer culture, and more." }
+  %meta{name: 'description', content: 'Megan Tiu is a full-stack developer in Atlanta, Georgia. This is her blog. Read all about her experiences with Ruby, Rails, Javascript, developer culture, and more.' }
 
 = render partial: "static/header.html.haml"
 .window.blog
