--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -2,4 +2,4 @@
   %title Getting and Setting Cookies in Javascript the Fun and Easy Way - Megan Tiu
 - else
   %title Megan Tiu
-%meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia."}
+%meta{name: 'description', content: 'Megan Tiu is a full-stack web developer based in Atlanta, Georgia.'}
