--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
   %title About - Megan Tiu
-  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia."}
+  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer based in Atlanta, Georgia. Read about her here.'}
 
 = render partial: "header.html.haml"
 .content.about
