--- a/app/views/static/contact.html.haml
+++ b/app/views/static/contact.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
   %title Contact - Megan Tiu
-  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia. You can contact her here."}
+  %meta{name: 'description', content: 'Megan Tiu is a full-stack web developer based in Atlanta, Georgia. You can contact her here.'}
 
 = render partial: "header.html.haml"
 .content.contact
