--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
   %title Now - Megan Tiu
-  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia. This is what she's up to now."}
+  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia. This is what she's up to now."}
 
 = render partial: "header.html.haml"
 .content.now
@@ -21,12 +21,9 @@
       %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
       where I serve as Communications Coordinator and get the joy of talking with and writing for inspiring, exciting women that love code.
     %li
-      I've founded and am the co-organizer for Ladies of Tech Talent South, a women's group with the TTS bootcamp that acknowledges how difficult it is for women to enter tech and aims to provide a safe space for socializing, studying, and supporting each other.
-    %li
-      I'm in a wonderful book club for growing developers where we just finished Hoover and Oshineye's
-      %a{:href => "http://chimera.labs.oreilly.com/books/1234000001813/index.html"} Apprenticeship Patterns: Guidance for the Aspiring Software Craftsman.
-      We've just begun Hunt and Thomas'
-      %a{href: 'https://pragprog.com/book/tpp/the-pragmatic-programmer'} The Pragmatic Programmer.
+      I'm in a wonderful book club for growing developers where we just finished Hunt and Thomas'
+      %a{href: 'https://pragprog.com/book/tpp/the-pragmatic-programmer'} The Pragmatic Programmer
+      and are about to begin Sandi Metz's Practical Object Oriented Design in Ruby.
     %li
       I get to snuggle and play with
       %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
