--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta do
   %title Talks - Megan Tiu
-  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia."}
+  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia. Here are the talks she's given."}
 
 = render partial: "header.html.haml"
 
