--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -1,7 +1,6 @@
 - content_for :meta do
   %title Megan Tiu
-  %meta{description: "Megan Tiu is a full-stack web developer based in Atlanta,
-    Georgia."}
+  %meta{name: 'description', content: "Megan Tiu is a full-stack web developer based in Atlanta, Georgia."}
 
 .container.home
   .photo
