--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -5,6 +5,16 @@
 = render partial: "header.html.haml"
 
 .content.talks
+  %h3.list-header Upcoming
+  %ul
+    %li
+      June 2017, We Rise,
+      %strong "Finding Beauty in the Mundane"
+    %li
+      September 2017, WindyCityRails,
+      %strong "Finding Beauty in the Mundane"
+  %br
+  %h3.list-header Past
   %ul
     %li
       November 2016, RubyConf,
