Update now and about pages

--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -8,22 +8,20 @@
   %ul
     %li
       I'm now working for
-      %a{href: 'http://callrail.com'} CallRail
-      and building interesting server-side tools that wonderfully appeal to my optimization and testing fixations.
+      %a{href: 'https://callrail.com'} CallRail
+      where I spend most of my days using Ruby to build complex inventory management and call routing systems. I'm also building a developer apprenticeship program at CallRail. If you've got thoughts on teaching and guiding new developers, I'd love to chat!
     %li
-      I'll be giving a
-      %a{href: 'http://rubyconf.org/program#prop_4'} talk a RubyConf this year!
-      Entitled "Bootcamp Grads Have Feelings, Too," it's a full-length version of my lightning talk from
-      %a{href: 'https://www.andconf.io/'} AndConf
-      on creating an inclusive community for people of all skill levels.
+      I'll be giving a talk on learning to love the less-glamorous parts of web development at
+      %a{href: 'https://werise.tech/'} We Rise
+      in Atlanta this June and at
+      %a{href: 'https://windycityrails.com/'} WindyCityRails
+      in Chicago this September.
     %li
       I'm on the board of directors for
       %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
       where I serve as Communications Coordinator and get the joy of talking with and writing for inspiring, exciting women that love code.
     %li
-      I'm in a wonderful book club for growing developers where we just finished Hunt and Thomas'
-      %a{href: 'https://pragprog.com/book/tpp/the-pragmatic-programmer'} The Pragmatic Programmer
-      and are about to begin Sandi Metz's Practical Object Oriented Design in Ruby.
+      I'm in a wonderful book club for ever-growing developers where we're reading Sandi Metz's Practical Object Oriented Design in Ruby.
     %li
       I get to snuggle and play with
       %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
