--- a/app/views/static/about.html.haml
+++ b/app/views/static/about.html.haml
@@ -9,7 +9,7 @@
     %a{href: 'http://callrail.com'} CallRail.
     Before that I worked for
     %a{:href => "http://www.fittery.com"} Fittery,
-    where I wore many hats on a small, fast-paced development team. I love writing clean code, optimizing efficiency, working with big data, and architecting APIs. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do and am excited to grow my computing knowledge in as many ways as possible.
+    where I wore many hats on a small, fast-paced development team. I love writing clean code, optimizing performance, working with big data, and architecting APIs. I'm also passionate about diversity in tech and building a positive, accessible community for all. I genuinely love the work I do and am excited to grow my computing knowledge in as many ways as possible.
   %p
     I graduated magna cum laude from Georgia State University with a BA in Film and Television and I also completed the Tech Talent South Code Immersion Program. When I'm not glued to my computer, I love tabletop and video gaming, tearing through Atlanta's streets by bike, and playing with
     = succeed "." do
