Add We Rise slides

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,14 +8,17 @@
   %h3.list-header Upcoming
   %ul
     %li
-      June 2017, We Rise,
-      %strong "Finding Beauty in the Mundane"
-    %li
       September 2017, WindyCityRails,
       %strong "Finding Beauty in the Mundane"
   %br
   %h3.list-header Past
   %ul
+    %li
+      June 2017, We Rise,
+      %strong "Finding Beauty in the Mundane"
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/finding-beauty-in-the-mundane'} slides
     %li
       November 2016, RubyConf,
       %strong "Bootcamp Grads Have Feelings, Too"
