Adding slides for WCR 2017 talk

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -5,14 +5,17 @@
 = render partial: "header.html.haml"
 
 .content.talks
-  %h3.list-header Upcoming
+  -#%h3.list-header Upcoming
+  -#%ul
+  -#%br
+  %h3.list-header Past
   %ul
     %li
       September 2017, WindyCityRails,
       %strong "Finding Beauty in the Mundane"
-  %br
-  %h3.list-header Past
-  %ul
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/finding-beauty-in-the-mundane-wcr'} slides
     %li
       June 2017, We Rise,
       %strong "Finding Beauty in the Mundane"
