--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -5,9 +5,12 @@
 = render partial: "header.html.haml"
 
 .content.talks
-  -#%h3.list-header Upcoming
-  -#%ul
-  -#%br
+  %h3.list-header Upcoming
+  %ul
+    %li
+      November 2017, RubyConf,
+      %strong "Finding Beauty in the Mundane"
+  %br
   %h3.list-header Past
   %ul
     %li
