Publish post 12: how to become a senior engineer

--- a/app/views/blog/index.html.haml
+++ b/app/views/blog/index.html.haml
@@ -6,6 +6,19 @@
 .window.blog
   .row
     .col-xs-12.col-sm-12.col-md-12.blogstream
+      %a{:href => 'blog/12/how-to-become-a-senior-software-engineer-in-2-years-or-less'}
+        %h2.title How to Become a Senior Software Engineer in 2 Years or Less
+        %p.date-stamp September 24, 2017
+      .post
+        %p.body
+          %ol
+            %li If possible, know going in that you really like writing code. This makes the process much smoother.
+            %li Soak up every bit of knowledge you can. Go through numerous tutorials, spend countless hours scouring documentation and Stack Overflow for answers and understanding.
+            %li Go to a bootcamp. Spend all your time in class or studying programming at home. Take full advantage of all office hours available to you. Make sure it's a big enough life change that, because of the combination of your completely new environment and very high stress levels, you cut off all your hair.
+        %p.body
+          %a{:href => 'blog/12/how-to-become-a-senior-software-engineer-in-2-years-or-less'} Read more...
+  .row
+    .col-xs-12.col-sm-12.col-md-12.blogstream
       %a{:href => 'blog/11/your-own-personal-gitignore'}
         %h2.title Your Own Personal .gitignore
         %p.date-stamp August 21, 2016
