--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -123,6 +123,12 @@
     width: 100%;
     height: 100%;
   }
+
+  .post ol {
+    padding-left: 5%;
+    padding-right: 0%;
+  }
+
   .body {
     padding-left: 0px;
     padding-right: 0px;
