--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -7,7 +7,7 @@
   %p#now Here's what I'm up to now:
   %ul
     %li
-      I'm now working for
+      I'm working for
       %a{href: 'https://callrail.com'} CallRail
       where I spend most of my days using Ruby to build complex inventory management and call routing systems. I also run a developer apprenticeship program at CallRail, helping grow two developing developers. If you've got thoughts on teaching and guiding new devs, I'd love to chat!
     %li
