Adding WCR talk video link

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -18,6 +18,8 @@
       %strong "Finding Beauty in the Mundane"
       %ul
         %li
+          %a{href: 'https://www.youtube.com/watch?v=SheQp9Gw9Dc'} video
+          \/
           %a{href: 'https://speakerdeck.com/megantiu/finding-beauty-in-the-mundane-wcr'} slides
     %li
       June 2017, We Rise,
