Update talks page with RubyConf video and special message

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -62,6 +62,11 @@
     text-align: left;
     margin: 0 17.5%;
   }
+
+  p.special-message {
+    text-align: left;
+    margin: 1% 17.5%;
+  }
 }
 
 /* About page */
