--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -6,12 +6,20 @@
 
 .content.talks
   %h3.list-header Upcoming
+  %p.special-message
+    Nothing's scheduled yet, but I am currently writing a talk entitled "The Practical Guide to Building an Apprenticeship" based on my experience creating and running a developer apprenticeship program at CallRail. If this is something you'd like to have at your conference,
+    %a.special-message{href: '/contact'} please get in touch!
+  %br
+  %h3.list-header Past
   %ul
     %li
       November 2017, RubyConf,
       %strong "Finding Beauty in the Mundane"
-  %br
-  %h3.list-header Past
+      %ul
+        %li
+          %a{href: 'https://www.youtube.com/watch?v=ZRgiVRqPVL4'} video
+          \/
+          %a{href: 'https://speakerdeck.com/megantiu/finding-beauty-in-the-mundane-rubyconf'} slides
   %ul
     %li
       September 2017, WindyCityRails,
