--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -11,15 +11,14 @@
       %a{href: 'https://callrail.com'} CallRail
       where I spend most of my days using Ruby to build complex inventory management and call routing systems. I also run a developer apprenticeship program at CallRail, helping grow two developing developers. If you've got thoughts on teaching and guiding new devs, I'd love to chat!
     %li
-      I'll be giving a talk on learning to love the less-glamorous parts of web development at
-      %a{href: 'https://werise.tech/'} RubyConf
-      in New Orleans this November.
+      I'm writing a new talk called "The Practical Guide to Building an Apprenticeship" based on my experience creating and running the apprenticeship at CallRail. If you are (or know) a conference organizer that's interested in having this talk at your conference, please
+      %a{href: '/contact'} get in touch!
     %li
       I'm on the board of directors for
       %a{:href => "http://railsgirlsatl.github.io"} Rails Girls Atlanta,
       where I serve as Communications Coordinator and get the joy of talking with and writing for inspiring, exciting women that love code.
     %li
-      I'm in a wonderful book club for ever-growing developers where we've just finish reading Sandi Metz's Practical Object Oriented Design in Ruby and are about to begin Robert Martin's Clean Coder.
+      I'm in a wonderful book club for ever-growing developers where we recently finish reading Sandi Metz's Practical Object Oriented Design in Ruby and have begun Martin Fowler's Refactoring.
     %li
       I get to snuggle and play with
       %a{:href => "https://www.instagram.com/p/1jWocBx4nk/"} this amazing beast
