Add write-up link for RubyConf 2017 talk

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -20,6 +20,8 @@
           %a{href: 'https://www.youtube.com/watch?v=ZRgiVRqPVL4'} video
           \/
           %a{href: 'https://speakerdeck.com/megantiu/finding-beauty-in-the-mundane-rubyconf'} slides
+          \/
+          %a{href: 'https://theplainprogrammer.com/rubyconf-2017-retrospective-day-1-ef986b402f3a'} write-up
   %ul
     %li
       September 2017, WindyCityRails,
