Add 2018 talks scheduled thus far

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -6,9 +6,13 @@
 
 .content.talks
   %h3.list-header Upcoming
-  %p.special-message
-    Nothing's scheduled yet, but I am currently writing a talk entitled "The Practical Guide to Building an Apprenticeship" based on my experience creating and running a developer apprenticeship program at CallRail. If this is something you'd like to have at your conference,
-    %a.special-message{href: '/contact'} please get in touch!
+  %ul
+    %li
+      March 2018, RubyConfPH,
+      %strong "The Practical Guide to Building an Apprenticeship"
+    %li
+      April 2018, RailsConf,
+      %strong "The Practical Guide to Building an Apprenticeship"
   %br
   %h3.list-header Past
   %ul
