Adding We Rise to the speaking schedule

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -13,6 +13,9 @@
     %li
       April 2018, RailsConf,
       %strong "The Practical Guide to Building an Apprenticeship"
+    %li
+      June 2018, We Rise,
+      %strong "The Practical Guide to Building an Apprenticeship"
   %br
   %h3.list-header Past
   %ul
