--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,9 +8,6 @@
   %h3.list-header Upcoming
   %ul
     %li
-      March 2018, RubyConfPH,
-      %strong "The Practical Guide to Building an Apprenticeship"
-    %li
       April 2018, RailsConf,
       %strong "The Practical Guide to Building an Apprenticeship"
     %li
@@ -19,6 +16,12 @@
   %br
   %h3.list-header Past
   %ul
+    %li
+      March 2018, RubyConfPH,
+      %strong "The Practical Guide to Building an Apprenticeship"
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship'} slides
     %li
       November 2017, RubyConf,
       %strong "Finding Beauty in the Mundane"
