Speaking at Madison Ruby, woo

--- a/app/views/static/now.html.haml
+++ b/app/views/static/now.html.haml
@@ -11,7 +11,7 @@
       %a{href: 'https://callrail.com'} CallRail
       where I spend most of my days using Ruby to build complex inventory management and call routing systems. I also run a developer apprenticeship program at CallRail, helping grow two developing developers. If you've got thoughts on teaching and guiding new devs, I'd love to chat!
     %li
-      I'm writing a new talk called "The Practical Guide to Building an Apprenticeship" based on my experience creating and running the apprenticeship at CallRail. If you are (or know) a conference organizer that's interested in having this talk at your conference, please
+      I've got a new talk called "The Practical Guide to Building an Apprenticeship" based on my experience creating and running the apprenticeship at CallRail. If you are (or know) a conference organizer that's interested in having this talk at your conference, please
       %a{href: '/contact'} get in touch!
     %li
       I'm on the board of directors for
