--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -11,6 +11,9 @@
       April 2018, RailsConf,
       %strong "The Practical Guide to Building an Apprenticeship"
     %li
+      May 2018, Madison+ Ruby: Chicago,
+      %strong "The Practical Guide to Building an Apprenticeship"
+    %li
       June 2018, We Rise,
       %strong "The Practical Guide to Building an Apprenticeship"
   %br
