--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,17 +8,23 @@
   %h3.list-header Upcoming
   %ul
     %li
-      April 2018, RailsConf,
-      %strong "The Practical Guide to Building an Apprenticeship"
-    %li
       May 2018, Madison+ Ruby: Chicago,
       %strong "The Practical Guide to Building an Apprenticeship"
     %li
       June 2018, We Rise,
       %strong "The Practical Guide to Building an Apprenticeship"
+    %li
+      June 2018, GORUCO,
+      %strong "The Practical Guide to Building an Apprenticeship"
   %br
   %h3.list-header Past
   %ul
+    %li
+      April 2018, RailsConf,
+      %strong "The Practical Guide to Building an Apprenticeship"
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship-railsconf'} slides
     %li
       March 2018, RubyConfPH,
       %strong "The Practical Guide to Building an Apprenticeship"
