Add Madison+ Ruby slides + Twitter reception

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,9 +8,6 @@
   %h3.list-header Upcoming
   %ul
     %li
-      May 2018, Madison+ Ruby: Chicago,
-      %strong "The Practical Guide to Building an Apprenticeship"
-    %li
       June 2018, We Rise,
       %strong "The Practical Guide to Building an Apprenticeship"
     %li
@@ -19,6 +16,14 @@
   %br
   %h3.list-header Past
   %ul
+    %li
+      May 2018, Madison+ Ruby: Chicago,
+      %strong "The Practical Guide to Building an Apprenticeship"
+      %ul
+        %li
+          %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship-madison-plus-ruby'} slides
+          \/
+          %a{href: 'https://wakelet.com/wake/ec966b45-f5d9-4366-be0c-0929dc49babd'} reception
     %li
       April 2018, RailsConf,
       %strong "The Practical Guide to Building an Apprenticeship"
