Add RailsConf video

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -29,6 +29,8 @@
       %strong "The Practical Guide to Building an Apprenticeship"
       %ul
         %li
+          %a{href: 'https://www.youtube.com/watch?v=5sVg7DtZ0zk'} video
+          \/
           %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship-railsconf'} slides
     %li
       March 2018, RubyConfPH,
