--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,10 +8,10 @@
   %h3.list-header Upcoming
   %ul
     %li
-      June 2018, We Rise,
+      June 2018, GORUCO,
       %strong "The Practical Guide to Building an Apprenticeship"
     %li
-      June 2018, GORUCO,
+      June 2018, We Rise,
       %strong "The Practical Guide to Building an Apprenticeship"
   %br
   %h3.list-header Past
@@ -37,6 +37,8 @@
       %strong "The Practical Guide to Building an Apprenticeship"
       %ul
         %li
+          %a{href: 'https://www.youtube.com/watch?v=N79J20KiWHY'} video
+          \/
           %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship'} slides
     %li
       November 2017, RubyConf,
