Update talks page

--- a/app/views/static/talks.html.haml
+++ b/app/views/static/talks.html.haml
@@ -8,14 +8,27 @@
   %h3.list-header Upcoming
   %ul
     %li
-      June 2018, GORUCO,
-      %strong "The Practical Guide to Building an Apprenticeship"
-    %li
-      June 2018, We Rise,
+      August 2018, self.Conference,
       %strong "The Practical Guide to Building an Apprenticeship"
   %br
   %h3.list-header Past
   %ul
+    %li
+      June 2018, We Rise,
+      %strong "The Practical Guide to Building an Apprenticeship"
+      %ul
+        %li
+          %a{href: 'https://www.recallact.com/presentation/practical-guide-building-apprenticeship'} video
+          \/
+          %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship-we-rise'} slides
+    %li
+      June 2018, GORUCO,
+      %strong "The Practical Guide to Building an Apprenticeship"
+      %ul
+        %li
+          %a{href: 'https://www.youtube.com/watch?v=31-DPycAKyY'} video
+          \/
+          %a{href: 'https://speakerdeck.com/megantiu/the-practical-guide-to-building-an-apprenticeship-goruco'} slides
     %li
       May 2018, Madison+ Ruby: Chicago,
       %strong "The Practical Guide to Building an Apprenticeship"
